# timeout-decorator

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGES.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements  requirements-testing.txt  requirements.txt  setup.cfg  setup.py  timeout_decorator.py  tox.ini
.github/workflows/: flake8.yml  pylint.yml  pytest.yml
tests/: test_timeout_decorator.py  test_timeoutd.py
timeout_decorator/: __init__.py  timeout_decorator.py
timeoutd/: __init__.py  timeoutd.py
