[metadata]
name = timeoutd
version = file:VERSION
description = Train LPV environments in an openAI gym framework.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/juhannc/timeoutd
author = Johann Christensen
author_email = johannchristensen@outlook.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
platforms =
    any
project_urls =
#    Documentation =
    Source = https://github.com/juhannc/timeoutd.git
    Tracker = https://github.com/juhannc/timeoutd/issues

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
python_requires = >=3.8

[options.extras_require]
tests =
    coverage
    flake8
    mypy
    pycodestyle
    pytest >= 6.2.2
    pytest-cov
all =
    %(tests)s

[flake8]
max-line-length = 88
max-complexity = 10
# These checks violate PEP8 so let's ignore them
extend-ignore = E203

[mypy]
python_version = 3.8
ignore_missing_imports = True
